--- a/index.html
+++ b/index.html
@@ -11,6 +11,50 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container center">
+      <div class="calculator">
+        <form>
+          <!-- calculator display -->
+          <div class="display">
+            <input type="text" name="display" />
+          </div>
+          <!-- first row -->
+          <div>
+            <input type="button" value="AC" />
+            <input type="button" value="DE" />
+            <input type="button" value="." />
+            <input type="button" value="/" />
+          </div>
+          <!-- 2nd row -->
+          <div>
+            <input type="button" value="7" />
+            <input type="button" value="8" />
+            <input type="button" value="9" />
+            <input type="button" value="*" />
+          </div>
+          <!-- 3rd row -->
+          <div>
+            <input type="button" value="4" />
+            <input type="button" value="5" />
+            <input type="button" value="6" />
+            <input type="button" value="-" />
+          </div>
+          <!-- 4th row -->
+          <div>
+            <input type="button" value="1" />
+            <input type="button" value="2" />
+            <input type="button" value="3" />
+            <input type="button" value="+" />
+          </div>
+          <!-- 5th row -->
+          <div>
+            <input type="button" value="00" />
+            <input type="button" value="0" />
+            <input class="equal" type="button" value="=" />
+          </div>
+        </form>
+      </div>
+    </div>
     <script src="/app.js"></script>
   </body>
 </html>
