--- a/index.html
+++ b/index.html
@@ -20,14 +20,30 @@
           </div>
           <!-- first row -->
           <div>
-            <input type="button" value="AC" onclick="display.value = ''" />
             <input
+              class="operator"
+              type="button"
+              value="AC"
+              onclick="display.value = ''"
+            />
+            <input
+              class="operator"
               type="button"
               value="DE"
               onclick="display.value = display.value.toString().slice(0,-1)"
             />
-            <input type="button" value="." onclick="display.value += '.'" />
-            <input type="button" value="/" onclick="display.value += '/'" />
+            <input
+              class="operator"
+              type="button"
+              value="."
+              onclick="display.value += '.'"
+            />
+            <input
+              class="operator"
+              type="button"
+              value="/"
+              onclick="display.value += '/'"
+            />
           </div>
           <!-- 2nd row -->
           <div>
@@ -42,24 +58,36 @@
             <input type="button" value="4" onclick="display.value += '4'" />
             <input type="button" value="5" onclick="display.value += '5'" />
             <input type="button" value="6" onclick="display.value += '6'" />
-            <input type="button" value="-" onclick="display.value += '-'" />
+            <input
+              class="operator"
+              type="button"
+              value="-"
+              onclick="display.value += '-'"
+            />
           </div>
           <!-- 4th row -->
           <div>
             <input type="button" value="1" onclick="display.value += '1'" />
             <input type="button" value="2" onclick="display.value += '2'" />
             <input type="button" value="3" onclick="display.value += '3'" />
-            <input type="button" value="+" onclick="display.value += '+'" />
+            <input
+              class="operator"
+              type="button"
+              value="+"
+              onclick="display.value += '+'"
+            />
           </div>
           <!-- 5th row -->
           <div>
             <input type="button" value="00" onclick="display.value += '00'" />
             <input type="button" value="0" onclick="display.value += '0'" />
+
+            <!-- eval() will evaluate or calculated by the given display data -->
             <input
               class="equal"
               type="button"
               value="="
-              onclick="display.value += '='"
+              onclick="display.value = eval(display.value)"
             />
           </div>
         </form>
